<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item android:id="@+id/mode"
        android:title="@string/mode" android:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/personal"
                      android:showAsAction="ifRoom"
                      android:title="@string/personal">
                </item>    
                <item android:id="@+id/business" 
                      android:showAsAction="ifRoom"
                      android:title="@string/business">
                    
                </item>
            </group>
        </menu>
    </item>

</menu>
