<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal" >

    <!-- Horizontal divider to apps -->

    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true">
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <LinearLayout
               android:id="@+id/business_layout_2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@android:color/transparent"
               android:gravity="center_horizontal"
               android:orientation="vertical"
               android:layout_below="@+id/business_layout_1" android:layout_alignLeft="@+id/business_layout_1"
               android:layout_marginTop="34dp" android:layout_alignRight="@+id/business_layout_1"
               android:visibility="visible">

                <TextView
                    android:id="@+id/business_name_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Business"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#404040"
                    android:textSize="20dp" />
                <LinearLayout
                    android:id="@+id/linearLayout_1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#3399ff"
                    android:orientation="horizontal" >
                </LinearLayout>

                <TextView
                    android:id="@+id/business_time_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_clock"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#686868"
                    android:textSize="15dp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/business_layout_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:gravity="center_horizontal"
                android:orientation="vertical" android:visibility="visible">

                <TextView
                    android:id="@+id/business_name_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_biz"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#00184c"
                    android:textSize="36dp" android:visibility="visible"/>

                <LinearLayout
                    android:id="@+id/linearLayout_2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#3399ff"
                    android:orientation="horizontal" >
                </LinearLayout>

                <TextView
                    android:id="@+id/business_time_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_clock"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="30dp" android:textColor="@android:color/secondary_text_light"
                    android:visibility="visible"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/business_layout_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/business_layout_0"
                android:layout_alignRight="@+id/business_layout_0"
                android:layout_below="@+id/business_layout_0"
                android:background="@android:color/transparent"
                android:gravity="center_horizontal"
                android:layout_marginTop="10sp"
                android:orientation="vertical" android:visibility="visible">

                <TextView
                    android:id="@+id/business_name_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#404040"
                    android:textSize="20dp" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#3399ff"
                    android:orientation="horizontal" >
                </LinearLayout>

                <TextView
                    android:id="@+id/business_time_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_clock"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#686868"
                    android:textSize="15dp" />
            </LinearLayout>
            <Button
                android:id="@+id/app_reservation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF9933"
                android:text="@string/reserve_button_text"
                android:textColor="#ffffff"
                android:layout_below="@+id/search_map_activity_button"
                android:layout_marginTop="25sp" android:layout_alignRight="@+id/button_tagin"
                android:layout_alignLeft="@+id/search_map_activity_button"/>
            <Button android:id="@+id/search_map_activity_button" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:background="#cda21e"
                    android:text="@string/search_text" android:textColor="#ffffff"
                    android:layout_alignParentStart="false" android:paddingRight="25sp" android:paddingLeft="25sp"
                    android:layout_alignTop="@+id/button_tagin" android:layout_alignLeft="@+id/business_layout_2"/>
            <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar"
                    android:layout_gravity="center_horizontal" android:layout_below="@+id/business_layout_0"
                    android:layout_centerHorizontal="true"/>
            <Button
                android:id="@+id/button_tagin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0565c5"
                android:text="@string/tagin_text"
                android:textColor="#ffffff" android:layout_gravity="center_horizontal"
                android:paddingLeft="25sp"
                android:paddingRight="25sp"
                android:layout_below="@+id/business_layout_2" android:layout_alignRight="@+id/business_layout_2"
                android:layout_marginTop="25sp"/>
        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>